<resources>
    <string name="app_name">Halo 5 Stats</string>
    <string name="main_title">Halo 5 Stats</string>
    <string name="gamertag_input">Enter a gamertag</string>
    <string name="stats_button_text">Get stats</string>
    <string name="gt_not_found">Gamertag not found, please try again.</string>
    <string name="temp_value">0</string>
    <string name="rank">Highest rank obtained:</string>
    <string name="kills">Kills:</string>
    <string name="deaths">Deaths:</string>
    <string name="kd_ratio">K/D</string>
    <string name="playtime">Total playtime:</string>
    <string name="wins">Wins:</string>
    <string name="losses">Losses:</string>
    <string name="wl_ratio">W/L</string>
    <string name="image_of_rank">image_of_rank</string>
    <string name="assists">Assists:</string>
    <string name="games_played">Matches:</string>
    <string name="image_of_team">team image</string>
    <string name="image_of_vehicle">vehicle image</string>
    <string name="ties">Ties:</string>
    <string name="headshots">Headshots:</string>
    <string name="accuracy">Accuracy:</string>
    <string name="shots_fired">Shots fired:</string>
    <string name="shots_landed">Shots landed:</string>
    <string name="top_wep">Top weapon:</string>
    <string name="image_of_weapon">weapon image</string>
    <string name="image_of_spartan">image_of_spartan</string>
    <string name="image_of_emblem">emblem image</string>
    <string name="spartan_text">Spartan:</string>
    <string name="spartan_rank">SR:</string>
    <string name="action_refresh">Refresh</string>
    <string name="total_melee_kills">Melee kills:</string>
    <string name="total_assassinations">Assasinations:</string>
    <string name="total_ground_pounds">Groundpounds:</string>
    <string name="total_spartan_charges">Spartan charges:</string>
    <string name="total_pw_kills">Power weapon kills:</string>
    <string name="total_grenade_kills">Grenade kills:</string>
</resources>
