<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/main_title"
        android:textSize="35sp"
        android:textColor="@color/colorPrimary"
        android:ems="10"
        android:id="@+id/main_title"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="85dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:maxLines="1"
        android:maxLength="15"
        android:ems="10"
        android:background="@color/colorWhite"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        android:id="@+id/gt_input"
        android:hint="@string/gamertag_input"
        android:layout_alignTop="@+id/main_title"
        android:layout_marginTop="175dp" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/stats_button"
        android:text="@string/stats_button_text"
        android:gravity="center"
        android:background="@drawable/stats_button_bg"
        android:textColor="@color/colorPrimary"
        android:layout_alignBottom="@+id/invalid_gt"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/invalid_gt"
        android:textColor="@color/colorAccent"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp" />

</RelativeLayout>
